<resources>
    <string name="app_name">UniEX Music</string>

    <string name="permission_non_granted_message">Need permission to run!</string>

    <string translatable="false" name="unknown_media_info">&lt;unknown&gt;</string>

    <string translatable="false" name="media_time_duration_nan">--:--</string>

    <string name="unable_to_play_during_call">Can\'t play during call!</string>

    <string name="uniex_playback_service_label">Playback service</string>

    <string name="menu_action_about">About</string>
    <string name="menu_action_volume">Volume</string>
    <string name="menu_action_equalizer">Equalizer</string>
    <string name="menu_action_back">Back</string>
    <string name="menu_action_search">Search</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_open_source">Open Source</string>
    <string name="menu_action_licence">Licence</string>

    <string name="about_activity_text_first">UniEX Music created by yacine-app</string>
    <string name="about_activity_text_second">You can find me on:</string>
    <string name="about_activity_text_github">Github</string>
    <string name="about_activity_text_twitter">Twitter</string>
    <string name="about_activity_text_website">Website</string>
    <string name="about_activity_text_version">Version: %s</string>

    <string name="list_empty_music_message">No music file were found.</string>

    <!--

    -->

    <string name="item_button_description_play">Play</string>
    <string name="item_button_description_pause">Pause</string>
    <string name="item_button_description_skip_to_next">Next</string>
    <string name="item_button_description_skip_to_previous">Previous</string>
    <string name="item_button_description_rewind">Rewind</string>
    <string name="item_button_description_logo">Logo</string>
    <string name="item_button_description_back_navigation">Back</string>
    <string name="item_button_description_forward">Forward</string>
    <string name="item_button_description_close">Close</string>
    <string name="item_button_description_media_art">Art</string>
    <string name="item_button_description_loop_play_all">Play all</string>
    <string name="item_button_description_loop_repeat_all">Repeat all</string>
    <string name="item_button_description_loop_repeat_one">Repeat one</string>
    <string name="item_button_description_play_list">Playlist</string>

    <string name="about_activity_text_no_default_web_browser">No web browser was found!</string>

    <string name="text_message_no_default_equalizer">No default equalizer app was found!</string>

    <string name="notification_player_service">Player Service</string>
    <string name="permission_activity_text">UniEX Music need the following permission in order to operate:</string>
    <string name="permission_activity_button">Accept</string>
    <string name="permission_activity_storage_per">Storage: </string>
    <string name="permission_activity_storage_after">storage permission is needed to read media content and play musics.</string>
    <string name="permission_activity_text_optimal">Optimal permission:</string>
    <string name="permission_activity_microphone_per">Microphone: </string>
    <string name="permission_activity_microphone_after">microphone permission is needed for visualizing function to work, you can use app without it.</string>
</resources>