<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.MediaPlayerDialogActivity"
    android:paddingBottom="10dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/dialog_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageButton
                android:id="@+id/dialog_button_close_action"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/item_button_description_close"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_close_action_icon"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/dialog_media_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown_media_info"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/dialog_tool_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_media_title">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_toStartOf="@id/dialog_button_play_pause_action">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/dialog_time_current_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/media_time_duration_nan"/>

                <TextView
                    android:id="@+id/dialog_time_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/media_time_duration_nan"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <SeekBar
                android:id="@+id/seek_bar_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/dialog_button_play_pause_action"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_play_action_icon"
            android:contentDescription="@string/item_button_description_play"
            android:background="?attr/selectableItemBackgroundBorderless"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>